[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/scripts/DebugFPS.gd" type="Script" id=1]
[ext_resource path="res://src/res/Theme.tres" type="Theme" id=2]
[ext_resource path="res://src/scripts/UI.gd" type="Script" id=3]
[ext_resource path="res://src/scripts/Upgrades.gd" type="Script" id=4]

[node name="GameUI" type="Control"]
anchor_right = 0.33
anchor_bottom = 0.33
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="TopBar" type="HBoxContainer" parent="."]
anchor_right = 1.0
alignment = 1

[node name="RoundCounter" type="Label" parent="TopBar"]
margin_left = 152.0
margin_right = 215.0
margin_bottom = 22.0
grow_horizontal = 2
text = "Round 0"
align = 1

[node name="VSeparator" type="VSeparator" parent="TopBar"]
margin_left = 219.0
margin_right = 223.0
margin_bottom = 22.0

[node name="ScoreCounter" type="Label" parent="TopBar"]
margin_left = 227.0
margin_right = 238.0
margin_bottom = 22.0
grow_horizontal = 2
text = "0"

[node name="hi wat u doin here" type="VSeparator" parent="TopBar"]
margin_left = 242.0
margin_right = 246.0
margin_bottom = 22.0

[node name="Cash" type="Label" parent="TopBar"]
margin_left = 250.0
margin_right = 270.0
margin_bottom = 22.0
grow_horizontal = 2
text = "$0"

[node name="FPS" type="Label" parent="."]
align = 1
script = ExtResource( 1 )

[node name="HP" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0
text = "5/5 HP"

[node name="EnemiesLeft" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
text = "Enemies Left: 0"
align = 2
valign = 2

[node name="Upgrades" type="Control" parent="."]
anchor_right = 0.33
anchor_bottom = 0.33
theme = ExtResource( 2 )
script = ExtResource( 4 )

[node name="UpgradesList" type="VBoxContainer" parent="Upgrades"]
anchor_bottom = 1.0
margin_right = 40.0
margin_bottom = 40.0

[node name="UpgradesLabel" type="Label" parent="Upgrades/UpgradesList"]
margin_right = 167.0
margin_bottom = 22.0
text = "Upgrades:"

[node name="Damage" type="HBoxContainer" parent="Upgrades/UpgradesList"]
margin_top = 26.0
margin_right = 167.0
margin_bottom = 54.0

[node name="DamageUpgrade" type="Button" parent="Upgrades/UpgradesList/Damage"]
margin_right = 75.0
margin_bottom = 28.0
text = "Damage"

[node name="Level" type="Label" parent="Upgrades/UpgradesList/Damage"]
margin_left = 79.0
margin_top = 3.0
margin_right = 116.0
margin_bottom = 25.0
text = "Lv. 0"

[node name="Price" type="Label" parent="Upgrades/UpgradesList/Damage"]
margin_left = 120.0
margin_top = 3.0
margin_right = 148.0
margin_bottom = 25.0
text = " $10"

[node name="Pierce" type="HBoxContainer" parent="Upgrades/UpgradesList"]
margin_top = 58.0
margin_right = 167.0
margin_bottom = 86.0

[node name="PierceUpgrade" type="Button" parent="Upgrades/UpgradesList/Pierce"]
margin_right = 58.0
margin_bottom = 28.0
text = "Pierce"

[node name="Level" type="Label" parent="Upgrades/UpgradesList/Pierce"]
margin_left = 62.0
margin_top = 3.0
margin_right = 99.0
margin_bottom = 25.0
text = "Lv. 0"

[node name="Price" type="Label" parent="Upgrades/UpgradesList/Pierce"]
margin_left = 103.0
margin_top = 3.0
margin_right = 131.0
margin_bottom = 25.0
text = " $10"

[node name="HP" type="HBoxContainer" parent="Upgrades/UpgradesList"]
margin_top = 90.0
margin_right = 167.0
margin_bottom = 118.0

[node name="HPUpgrade" type="Button" parent="Upgrades/UpgradesList/HP"]
margin_right = 69.0
margin_bottom = 28.0
text = "Max HP"

[node name="Level" type="Label" parent="Upgrades/UpgradesList/HP"]
margin_left = 73.0
margin_top = 3.0
margin_right = 110.0
margin_bottom = 25.0
text = "Lv. 0"

[node name="Price" type="Label" parent="Upgrades/UpgradesList/HP"]
margin_left = 114.0
margin_top = 3.0
margin_right = 142.0
margin_bottom = 25.0
text = " $10"

[node name="dfghsdfgihjdsfg" type="Label" parent="Upgrades/UpgradesList"]
margin_top = 122.0
margin_right = 167.0
margin_bottom = 144.0
text = "Enter to call next round"

[connection signal="button_down" from="Upgrades/UpgradesList/Damage/DamageUpgrade" to="Upgrades" method="_on_DamageUpgrade_button_down"]
[connection signal="button_down" from="Upgrades/UpgradesList/Pierce/PierceUpgrade" to="Upgrades" method="_on_PierceUpgrade_button_down"]
[connection signal="button_down" from="Upgrades/UpgradesList/HP/HPUpgrade" to="Upgrades" method="_on_HPUpgrade_button_down"]
